# Simulateur-traffique

./: .gitignore  CHANGELOG.md  conf.py  conftest.py  index.rst  main.py  pycairo-1.29.0-cp310-cp310-linux_x86_64.whl  pygobject-3.54.3-cp310-cp310-linux_x86_64.whl  pyproject.toml  requirements.txt  resultats_reseau.json  resultats_vehicules.csv  setup.py  statistiques_simulation.json
.github/workflows/: ci.yml
_build/doctrees/: CHANGELOG.doctree  changelog.doctree  environment.pickle  index.doctree
_build/doctrees/source/: core.analyseur.doctree  core.doctree  models.doctree  models.reseau.doctree  models.route.doctree  models.vehicule.doctree  modules.doctree
_build/html/: .buildinfo  .buildinfo.bak  CHANGELOG.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/.doctrees/: changelog.doctree  environment.pickle  index.doctree
_build/html/_modules/: index.html  main.html
core/: __init__.py  analyseur.py  simulateur.py
core/analyseur/: analyseur.py
core/simulateur/: simulateur.py
data/: config_reseau.json
docs/: models.html  search.js
interface/: affichage.py  export.py
models/: reseau.py  route.py  vehicule.py
models/reseau/: reseau.py
models/route/: __init__.py  feu_rouge.py  route.py
models/vehicule/: vehicule.py
simulateur_trafic/: cli.py
source/: core.analyseur.rst  interface.affichage.rst  models.reseau.rst  models.route.rst  models.rst  modules.rst
tests/: test_feu_rouge.py  test_route_feu.py  test_simulateur.py
tools/: profile_simulation.py  test_exceptions.py
(+48 files in other folders)
