[tool.poetry]
name = "simulateur-trafic"
packages = [
   { include = "simulateur_trafic" },
]
version = "0.1.0"
description = "Similateur de Traffic de Voitures"
authors = ["Dhia Ben Hamouda"]
readme = "README.md"
license = "MIT"
keywords = ["traffic", "simulation"]
include = [
    "simulateur_trafic/data/*.json",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
twine = "^6.2.0"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
